modified Stack